--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,14 @@
 # Site settings
-title:
-email:
+title: Creative Theme
+email: theme@viennalabs.com
 description: > # this means to ignore newlines until "baseurl:"
+ Creative is a one page Bootstrap theme for creatives, small businesses, and other multipurpose uses.
+ The theme includes a number of rich features and plugins that you can use as a great boilerplate for your next Jekyll project!
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "" # the base hostname & protocol for your site
 
-twitter_username:
-github_username:
+twitter_username: volnyio
+github_username:  volny
 
 # Build settings
 markdown: kramdown
